[tool.poetry]
name = "airbyte-embed-cdk"
version = "0.1.0"
description = ""
authors = ["Michel Tricot <michel@airbyte.io>"]

[tool.poetry.dependencies]
python = "^3.9"
airbyte-cdk = "^0.47.1"
llama-index = { version = "^0.7.13", optional = true }
langchain = { version = "^0.0.245", optional = true }

[tool.poetry.extras]
llama-index = ["llama-index"]
langchain = ["langchain"]

[tool.poetry.group.lint.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
flake8-pyproject = "^1.2.3"
pyproject-autoflake = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ["py39"]

[tool.isort]
profile = "black"
py_version = 311
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src", "tests"]

[tool.autoflake]
recursive = true
in-place = true
expand-star-imports = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.flake8]
extend-exclude = [
    ".venv",
    "build",
]
max-complexity = 20
extend-ignore = [
  "E203",  # whitespace before ':' (conflicts with Black)
  "E231",  # Bad trailing comma (conflicts with Black)
  "E501",  # line too long (conflicts with Black)
  "W503",  # line break before binary operator (conflicts with Black)
]

[tool.pytest.ini_options]
testpaths = [
    "tests/unit_tests"
]
