[tool.poetry]
name = "airbyte-embed-cdk"
version = "0.1.0"
description = ""
authors = ["Michel Tricot <michel@airbyte.io>"]

[tool.poetry.dependencies]
python = "^3.9"
airbyte-cdk = "^0.47.1"
llama-index = { version = "^0.7.13", optional = true }
langchain = { version = "^0.0.245", optional = true }

[tool.poetry.extras]
llama-index = ["llama-index"]
langchain = ["langchain"]

[tool.poetry.group.lint.dependencies]
black = "^22.12.0"
ruff = "^0.0.280"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 140
target-version = ["py39"]

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
line-length = 140

[tool.pytest.ini_options]
testpaths = [
    "tests/unit_tests"
]
